--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -140,6 +140,29 @@ jobs:
           path: build/*.nupkg
           retention-days: 90
 
+      # Publish packages to GitHub Packages
+      - name: Publish Packages to GitHub Packages
+        if: success()
+        run: |
+          OWNER="${{ github.repository_owner }}"
+          FEED_URL="https://nuget.pkg.github.com/$OWNER/index.json"
+          
+          # Configure GitHub Packages as a NuGet source
+          dotnet nuget add source $FEED_URL \
+            --name "github" \
+            --username $OWNER \
+            --password ${{ secrets.GITHUB_TOKEN }} \
+            --store-password-in-clear-text
+          
+          # Publish all packages
+          for package in build/*.nupkg; do
+            echo "Publishing $package to GitHub Packages..."
+            dotnet nuget push "$package" \
+              --source "github" \
+              --api-key ${{ secrets.GITHUB_TOKEN }} \
+              --skip-duplicate
+          done
+
       # Publish packages to Octopus Deploy built-in feed
       - name: Publish Packages to Octopus Deploy
         shell: pwsh
