--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -473,13 +473,25 @@ jobs:
           server_task_id: ${{ fromJson(steps.start-deploy-to-tdd.outputs.server_tasks)[0].serverTaskId }}
           timeout_after: 1800          
 
-          
+         
+
+      - name: Download Acceptance Tests Package
+        uses: actions/download-artifact@v4
+        with:
+          name: churchbulletin-nuget-packages
+          path: ./packages
+
+      - name: Extract Acceptance Tests Package
+        run: |
+          unzip -o ./packages/ChurchBulletin.AcceptanceTests.${{ env.BUILD_BUILDNUMBER }}.nupkg -d ./acceptance-tests-package
+
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Get Container App FQDN
+  
+      - name: Get Container App FQDN and Connection String
         run: |
           CONTAINER_APP_FQDN=$(az containerapp show \
             --name ui-gh \
@@ -497,17 +509,14 @@ jobs:
           echo "Container App URL: $CONTAINER_APP_URL"
           echo "CONTAINER_APP_URL=$CONTAINER_APP_URL" >> $GITHUB_ENV
           echo "ApplicationBaseUrl=$CONTAINER_APP_URL" >> $GITHUB_ENV
-
-      - name: Download Acceptance Tests Package
-        uses: actions/download-artifact@v4
-        with:
-          name: churchbulletin-nuget-packages
-          path: ./packages
-
-      - name: Extract Acceptance Tests Package
-        run: |
-          unzip -o ./packages/ChurchBulletin.AcceptanceTests.${{ env.BUILD_BUILDNUMBER }}.nupkg -d ./acceptance-tests-package
-
+          
+          # Get the connection string from container app environment variables
+          CONTAINER_APP_CONNECTION_STRING=$(az containerapp show \
+            --name ui-gh \
+            --resource-group ${{ env.ResourceGroupName }} \
+            --query "properties.template.containers[0].env[?name=='ConnectionStrings__SqlConnectionString'].value" \
+            -o tsv)
+  
       - name: Configure Acceptance Tests
         run: |
           # Find the extracted package directory
@@ -520,12 +529,16 @@ jobs:
           
           echo "Found package directory: $PACKAGE_DIR"
           
-          # Create appsettings.acceptancetests.json with the container app URL
+          # Create appsettings.acceptancetests.json with the container app URL and connection string
           APP_SETTINGS_FILE="$PACKAGE_DIR/appsettings.acceptancetests.json"
+          
+          # Use container app connection string from environment variable if available, otherwise use default
+          # The connection string is set in the previous step via GITHUB_ENV
+          
           cat > "$APP_SETTINGS_FILE" << EOF
           {
             "ConnectionStrings": {
-              "SqlConnectionString": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;TrustServerCertificate=true;"
+              "SqlConnectionString": "${{ env.CONTAINER_APP_CONNECTION_STRING }}"
             },
             "ApplicationBaseUrl": "${{ env.CONTAINER_APP_URL }}",
             "StartLocalServer": "false",
